RESOLVED FIXED143958
Context menu doesn't account for selection semantics
https://bugs.webkit.org/show_bug.cgi?id=143958
Summary Context menu doesn't account for selection semantics
Brent Fulgham
Reported 2015-04-20 11:59:47 PDT
The right-click context menu only considers the word directly under the mouse. Instead, we should use the Lookup module (like we do with immediate actions) so that we get a contextually-relevant selection.
Attachments
Patch (4.70 KB, patch)
2015-04-21 11:26 PDT, Brent Fulgham
no flags
Archive of layout-test-results from ews102 for mac-mavericks (990.65 KB, application/zip)
2015-04-21 12:02 PDT, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-mavericks-wk2 (1017.09 KB, application/zip)
2015-04-21 12:14 PDT, Build Bot
no flags
Patch v2 (Test Fixes) (105.31 KB, patch)
2015-04-22 11:34 PDT, Brent Fulgham
no flags
Archive of layout-test-results from ews103 for mac-mavericks (846.49 KB, application/zip)
2015-04-22 11:56 PDT, Build Bot
no flags
Archive of layout-test-results from ews104 for mac-mavericks-wk2 (800.62 KB, application/zip)
2015-04-22 12:14 PDT, Build Bot
no flags
Patch (v3 Don't touch regular selection) (8.39 KB, patch)
2015-04-22 14:26 PDT, Brent Fulgham
thorton: review+
Brent Fulgham
Comment 1 2015-04-20 12:00:11 PDT
Brent Fulgham
Comment 2 2015-04-21 11:26:22 PDT
Build Bot
Comment 3 2015-04-21 12:02:12 PDT
Comment on attachment 251247 [details] Patch Attachment 251247 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/4708163676798976 Number of test failures exceeded the failure limit.
Build Bot
Comment 4 2015-04-21 12:02:16 PDT
Created attachment 251249 [details] Archive of layout-test-results from ews102 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-mavericks Platform: Mac OS X 10.9.5
Brent Fulgham
Comment 5 2015-04-21 12:11:38 PDT
Uh oh! Looks like I introduced some crashes. Will fix.
Build Bot
Comment 6 2015-04-21 12:14:44 PDT
Comment on attachment 251247 [details] Patch Attachment 251247 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/4863398290391040 Number of test failures exceeded the failure limit.
Build Bot
Comment 7 2015-04-21 12:14:48 PDT
Created attachment 251253 [details] Archive of layout-test-results from ews107 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Brent Fulgham
Comment 8 2015-04-21 15:02:57 PDT
WebKit Commit Bot
Comment 9 2015-04-21 16:21:21 PDT
Re-opened since this is blocked by bug 144021
Brent Fulgham
Comment 10 2015-04-22 11:34:39 PDT
Created attachment 251345 [details] Patch v2 (Test Fixes)
Brent Fulgham
Comment 11 2015-04-22 11:36:46 PDT
Comment on attachment 251345 [details] Patch v2 (Test Fixes) Revised patch as follows: 1. Dictionary lookup was not honoring standard WebKit editing rules for handling hit tests at end-of-line, end-of-paragraph, etc. 2. The new dictionary lookup was not retaining trailing spaces when asked to by the system. 3. Rebaselined one test for the new dictionary-lookup behavior.
Brent Fulgham
Comment 12 2015-04-22 11:50:55 PDT
Looks like I'll also need to rebaseline some tests based on the Mavericks bot output.
Build Bot
Comment 13 2015-04-22 11:56:13 PDT
Comment on attachment 251345 [details] Patch v2 (Test Fixes) Attachment 251345 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6495054554202112 New failing tests: editing/selection/select-from-textfield-outwards.html editing/selection/doubleclick-beside-cr-span.html
Build Bot
Comment 14 2015-04-22 11:56:15 PDT
Created attachment 251348 [details] Archive of layout-test-results from ews103 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 15 2015-04-22 12:14:41 PDT
Comment on attachment 251345 [details] Patch v2 (Test Fixes) Attachment 251345 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6563398422626304 New failing tests: editing/selection/select-from-textfield-outwards.html
Build Bot
Comment 16 2015-04-22 12:14:44 PDT
Created attachment 251355 [details] Archive of layout-test-results from ews104 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Brent Fulgham
Comment 17 2015-04-22 14:26:50 PDT
Created attachment 251367 [details] Patch (v3 Don't touch regular selection)
Brent Fulgham
Comment 18 2015-04-22 14:48:05 PDT
Comment on attachment 251367 [details] Patch (v3 Don't touch regular selection) Revised the patch to only affect context menu operations. This corrected the five failing tests.
Tim Horton
Comment 19 2015-04-22 14:53:22 PDT
Comment on attachment 251367 [details] Patch (v3 Don't touch regular selection) You could probably write a test.
Brent Fulgham
Comment 20 2015-04-22 15:11:35 PDT
Brent Fulgham
Comment 21 2015-04-22 15:35:42 PDT
(In reply to comment #19) > Comment on attachment 251367 [details] > Patch (v3 Don't touch regular selection) > > You could probably write a test. Test added during landing! :-)
Note You need to log in before you can comment on or make changes to this bug.