Context menu doesn't account for selection semantics https://bugs.webkit.org/show_bug.cgi?id=143958 <rdar://problem/19735706>

Reviewed by Tim Horton.

Before using the default word-only selection, check with the
lookup service to see if we can get a semantically appropriate
selection.

* page/EventHandler.cpp:
(WebCore::EventHandler::selectClosestWordFromHitTestResultBasedOnLookup):
(WebCore::EventHandler::selectClosestWordFromHitTestResult):
* page/EventHandler.h:
* page/mac/EventHandlerMac.mm:
(WebCore::EventHandler::selectClosestWordFromHitTestResultBasedOnLookup):


Canonical link: https://commits.webkit.org/161980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183077 268f45cc-cd09-0410-ab3c-d52691b4dbfc